Fix: Loop item selector overlapping block toolbar

--- a/src/blocks/looper/editor.scss
+++ b/src/blocks/looper/editor.scss
@@ -13,6 +13,6 @@
     box-shadow: none !important;
     border: none !important;
     background: none !important;
-		z-index: 100;
+		z-index: 10;
 	}
 }
